@@ -36,6 +36,8 @@ Release @version@-@release@ Start 24/04/2023 End XX/XX/XXXX
     SSL_CTX_set_ciphersuites when method is auto
 24. tls/tls.c: set min/max proto version only when min/max version variable is
     non-zero
+- 26/08/2023
+25. tls/tls.c: refactored tls_get_method(), tls_set_method()
 
 * Sun Apr 23 2023 16:55:15 +0000 Manvendra Bhangui <libqmail@indimail.org> 1.1.3-1.1%{?dist}
 Release 1.1.3-1.1 Start 08/02/2023 End 23/04/2023
